route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: demo-app
  name: demo-app
  namespace: demo
spec:
  host: demo-app.crc-vm.8gtao5hvrb9z.instruqt.io
  port:
    targetPort: web
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: demo-app
    weight: 100
  wildcardPolicy: None
